...
            "state" : "translated",
            "value" : "新增收藏網站"
          }
        }
      }
    },
    "Add another time period" : {
      "comment" : "Button when subscribing to notifications",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar otro período de tiempo"
...
            "state" : "translated",
            "value" : "新增收藏"
          }
        }
      }
    },
    "Add favorite stops" : {
      "comment" : "Header for the route details picker when entering from the favorites page to select favorite stops\nVoiceOver label for add stops button",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar paradas favoritas"
...
            "state" : "translated",
            "value" : "收藏網站功能已替代原有的星標線路功能。"
          }
        }
      }
    },
    "Favorites" : {
      "comment" : "Header for favorites sheet\nThe label for the Favorites page in the navigation bar",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favoritos"
...
            "state" : "translated",
            "value" : "大霧"
          }
        }
      }
    },
    "Follow" : {
      "comment" : "Text on a button to enter a focused view that follows a single vehicle on a trip",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Seguir"
...
            "state" : "translated",
            "value" : "MBTA通用資訊與支援"
          }
        }
      }
    },
    "Get disruption notifications" : {
      "comment" : "Setting for push notifications for alerts",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recibir notificaciones de interrupciones"
...
            "state" : "translated",
            "value" : "列出剩餘站點"
          }
        }
      }
    },
    "Live" : {
      "comment" : "Indicates that data is being updated in real-time",
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "En vivo"
...
