...
                id: .init("Red"),
                type: .heavyRail,
                color: "DA291C",
                directionNames: ["South", "North"],
                directionDestinations: ["Ashmont/Braintree", "Alewife"],
                isListedRoute: true,
                longName: "Red Line",
                shortName: "",
                sortOrder: 10010,
                textColor: "FFFFFF",
                lineId: .init("line-Red"),
                routePatternIds: nil
            ))
...
            ))
            RoutePillPreview(route: Route(
                id: .init("Green-B"),
                type: .lightRail,
                color: "00843D",
                directionNames: ["West", "East"],
                directionDestinations: ["Boston College", "Government Center"],
                isListedRoute: true,
                longName: "Green Line B",
                shortName: "B",
                sortOrder: 10032,
                textColor: "FFFFFF",
                lineId: .init("line-Green"),
...
